Melhoria: acrescentado Fragment

--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -70,8 +70,10 @@
         android:focusable="true"
         android:hint="@string/celular"
         android:importantForAutofill="no"
-        android:inputType="textEmailAddress"
+        android:inputType="phone"
+        android:maxLength="13"
         android:minHeight="48dp"
+        android:numeric="integer"
         android:textColorHighlight="#ff7eff15"
         app:layout_constraintBottom_toTopOf="@+id/edEmail"
         app:layout_constraintEnd_toEndOf="parent"
