--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,58 +8,110 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="266dp"
-        android:layout_height="293dp"
+        android:layout_width="306dp"
+        android:layout_height="196dp"
+        android:layout_marginTop="80dp"
         android:clickable="false"
-        android:contentDescription="@string/todo"
-        app:layout_constraintBottom_toTopOf="@+id/btValidaLogin"
+        android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.113"
         app:srcCompat="@drawable/tela_inicial" />
-
-    <Button
-        android:id="@+id/btValidaLogin"
-        android:layout_width="163dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="56dp"
-        android:backgroundTint="@color/marron_botao"
-        android:onClick="onLogin"
-        android:text="@string/login"
-        app:cornerRadius="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintHorizontal_bias="0.377"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="163dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="56dp"
-        android:backgroundTint="@color/marron_botao"
-        android:onClick="onRegistro"
-        android:text="@string/registrar"
-        app:cornerRadius="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/lbmensagem"
-        android:layout_width="283dp"
-        android:layout_height="84dp"
-        android:layout_marginTop="44dp"
-        android:editable="false"
+        android:layout_width="285dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="20dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif-medium"
+        android:text="@string/efetue_seu_login"
         android:textAlignment="center"
         android:textColor="@color/marron_botao"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:ignore="TextContrastCheck" />
+
+    <EditText
+        android:id="@+id/textLoginEmail"
+        android:layout_width="351dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:drawablePadding="@dimen/icon_distance"
+        android:ems="10"
+        android:hint="@string/email"
+        android:importantForAutofill="no"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lbmensagem" />
+
+    <EditText
+        android:id="@+id/textLoginSenha"
+        android:layout_width="351dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawablePadding="@dimen/icon_distance"
+        android:ems="10"
+        android:hint="@string/senha"
+        android:importantForAutofill="no"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textLoginEmail" />
+
+
+    <Button
+        android:id="@+id/buttonLogin"
+        android:layout_width="146dp"
+        android:layout_height="48dp"
+
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="28dp"
+        android:backgroundTint="@color/marron_botao"
+        android:text="@string/login"
+        app:cornerRadius="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textLoginSenha" />
+
+    <Button
+        android:id="@+id/buttonRegistrar"
+        android:layout_width="157dp"
+        android:layout_height="48dp"
+
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="72dp"
+        android:backgroundTint="@color/marron_botao"
+        android:text="@string/registrar"
+        app:cornerRadius="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textLoginSenha" />
+
+    <TextView
+        android:id="@+id/textRecuperar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:clickable="true"
+        android:focusable="false"
+        android:linksClickable="true"
+        android:text="Esqueci minha senha"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textLoginSenha" />
+
+    <ProgressBar
+        android:id="@+id/barraLogin"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="181dp"
+        android:layout_height="175dp"
+        android:indeterminateTint="@color/marron_botao"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
