--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -2,30 +2,38 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     tools:context=".Activity.ProdutoActivity">
-
-    <EditText
-        android:id="@+id/edProduto"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Produto"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/viewProduto"
         android:layout_width="0dp"
-        android:layout_height="491dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:choiceMode="singleChoice"
         android:clickable="true"
         android:contextClickable="false"
         android:defaultFocusHighlightEnabled="false"
         android:drawSelectorOnTop="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edProduto" />
+        app:layout_constraintTop_toBottomOf="@+id/edProduto"
+        app:layout_constraintVertical_bias="0.493" />
+
+    <EditText
+        android:id="@+id/edProduto"
+        android:layout_width="412dp"
+        android:layout_height="0dp"
+        android:ems="10"
+        android:hint="@string/produto"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextContrastCheck"
+        android:autofillHints="" />
 </androidx.constraintlayout.widget.ConstraintLayout>
