--- a/app/src/main/res/menu/menu_pedido.xml
+++ b/app/src/main/res/menu/menu_pedido.xml
@@ -6,5 +6,15 @@
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="Pesquisa"
+        android:iconTint="@color/white"
         app:actionViewClass="android.widget.SearchView" />
+    <item
+        android:id="@+id/app_sair"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Sair"
+        android:iconTint="@color/white"
+        app:actionViewClass="android.widget.SearchView" />
+
+
+
 </menu>
