--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -22,8 +22,15 @@
         android:icon="@drawable/delete_forever_24"
         android:title="Excluir"
         app:showAsAction="always"></item>
+
     <item
         android:id="@+id/menu_sair"
+        android:icon="@drawable/ic_search_black_24dp"
         android:title="Sair"
-        app:showAsAction="always"></item>
+        android:iconTint="@color/white"
+        app:actionViewClass="android.widget.SearchView" />
+
+
+
+
 </menu>
