--- a/app/src/main/res/layout/fragment_carrinho.xml
+++ b/app/src/main/res/layout/fragment_carrinho.xml
@@ -33,7 +33,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonFinalizar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Finalizar" />
